@@ -1,3 +1,13 @@
+2011-06-04  Manuel Argüelles  <manuel.arguelles@azetti.com>
+
+	* plugins/lmgtfy.py (lmgtfy): Example plugin for lmgtfy.com
+
+	* Irc.py (Irc.connect): Setup listener queue for messages
+	from the plugins
+
+	* Plugin.py (Plugin): Added methods to send messages and
+	data to the IRC server from the plugins
+
 2011-06-01  Manuel Argüelles  <manuel.arguelles@azetti.com>
 
 	* plugins/logger.py (logger.setup): Cleaned up a bit
